--- a/WeatherApp/presentation/src/main/res/values/strings.xml
+++ b/WeatherApp/presentation/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="exception_message_generic">Ошибка приложения</string>
     <string name="london">Лондон</string>
-    <string name="clear_sky">Чистое небо</string>
+    <string name="clear_sky">Ясноо</string>
     <string name="currently_19">Сейчас 19°</string>
     <string name="today_15_22">Сегодня 15°-22°</string>
     <string name="celsius">°C</string>
